--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,15 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jocelinkisenga/agent"
+        }
+    ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": ">=5.4.0",
-        "jenssegers/agent": "2.6.*"
+        "php": "^8.1|^8.2|^8.3",
+        "jenssegers/agent": "dev-master"
     },
     "autoload": {
         "psr-4": {
