--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": ">=5.4.0",
-        "jenssegers/agent": "2.6.*"
+        "laravel/framework": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
